k8s/conf/bridge-domain-nsc.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "bridge-domain-nsc"
    spec:
      nodeSelector:
        node-role.kubernetes.io/master: ""
      containers:
        - name: alpine-img
          image: alpine:latest
          command: ['tail', '-f', '/dev/null']
metadata:
  name: nsc-vpp
  namespace: default
