k8s/conf/dpr.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io: "true"
        networkservicemesh.io/app: "dpr"
    spec:
      containers:
        - name: dpr
          image: networkservicemesh/dpr:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nsm-socket
              mountPath: /var/lib/networkservicemesh
      volumes:
        - hostPath:
            path: /var/lib/networkservicemesh
            type: DirectoryOrCreate
          name: nsm-socket
metadata:
  name: dpr
  namespace: default
