k8s/conf/monitoring-nsc.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "monitoring-nsc"
      networkservicemesh.io/impl: "monitoring-nsc"
  replicas: 2
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "monitoring-nsc"
        networkservicemesh.io/impl: "monitoring-nsc"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: networkservicemesh.io/app
                    operator: In
                    values:
                      - monitoring-nsc
                  - key: networkservicemesh.io/impl
                    operator: In
                    values:
                      - monitoring-nsc
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: monitoring-nsc
          image: networkservicemesh/monitoring-nsc:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              networkservicemesh.io/socket: 1
metadata:
  name: monitoring-nsc
  namespace: nsm-system
