k8s/conf/nse.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io: "true"
        networkservicemesh.io/app: "nse"
    spec:
      containers:
        - name: nse-1
          image: nsmd/nse:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: connect-socket
              mountPath: /var/lib/networkservicemesh
      volumes:
        - hostPath:
            path: /var/lib/networkservicemesh
            type: DirectoryOrCreate
          name: connect-socket
metadata:
  name: nse-1
  namespace: default
