k8s/conf/nsmd-k8s.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nsmd
spec:
  template:
    metadata:
      labels:
        app: nsmd-ds
    spec:
      containers:
        - name: nsmdp
          image: nsmd/nsmdp
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: kubelet-socket
              mountPath: /var/lib/kubelet/device-plugins
            - name: nsm-socket
              mountPath: /var/lib/networkservicemesh
        - name: nsmd
          image: nsmd/nsmd
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nsm-socket
              mountPath: /var/lib/networkservicemesh
      volumes:
        - hostPath:
            path: /var/lib/kubelet/device-plugins
            type: DirectoryOrCreate
          name: kubelet-socket
        - hostPath:
            path: /var/lib/networkservicemesh
            type: DirectoryOrCreate
          name: nsm-socket
