k8s/conf/nsmgr.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nsmgr
spec:
  template:
    metadata:
      labels:
        app: nsmgr-daemonset
    spec:
      containers:
        - name: nsmdp
          image: networkservicemesh/nsmdp
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: kubelet-socket
              mountPath: /var/lib/kubelet/device-plugins
            - name: nsm-socket
              mountPath: /var/lib/networkservicemesh
        - name: nsmd
          image: networkservicemesh/nsmd
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nsm-socket
              mountPath: /var/lib/networkservicemesh
          livenessProbe:
            httpGet:
              path: /liveness
              port: 5555
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5555
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
        - name: nsmd-k8s
          image: networkservicemesh/nsmd-k8s
          imagePullPolicy: IfNotPresent
      volumes:
        - hostPath:
            path: /var/lib/kubelet/device-plugins
            type: DirectoryOrCreate
          name: kubelet-socket
        - hostPath:
            path: /var/lib/networkservicemesh
            type: DirectoryOrCreate
          name: nsm-socket
