k8s/conf/vppagent-firewall-nse.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "firewall"
      networkservicemesh.io/impl: "secure-intranet-connectivity"
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "firewall"
        networkservicemesh.io/impl: "secure-intranet-connectivity"
    spec:
      containers:
        - name: firewall-nse
          image: networkservicemesh/vppagent-firewall-nse:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              networkservicemesh.io/socket: 1
metadata:
  name: vppagent-firewall-nse
  namespace: default
