k8s/conf/vppagent-nsc.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        networkservicemesh.io: "true"
        networkservicemesh.io/app: "vppagent-nsc"
    spec:
      hostPID: true
      containers:
        - name: vppagent-nsc
          image: networkservicemesh/vppagent-nsc:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              nsm.ligato.io/socket: 1
metadata:
  name: vppagent-nsc
  namespace: default
