k8s/conf/vppagent-passthrough-nse.yaml
---
apiVersion: apps/v1
kind: Deployment
spec:
  selector:
    matchLabels:
      networkservicemesh.io/app: "passthrough"
      networkservicemesh.io/impl: "secure-intranet-connectivity"
  replicas: 1
  template:
    metadata:
      labels:
        networkservicemesh.io/app: "passthrough"
        networkservicemesh.io/impl: "secure-intranet-connectivity"
    spec:
      containers:
        - name: passthrough-nse
          image: networkservicemesh/vppagent-firewall-nse:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              networkservicemesh.io/socket: 1
          volumeMounts:
            - mountPath: /etc/vppagent-firewall/config.yaml
              subPath: config.yaml
              name: vppagent-passthrough-config-volume
      volumes:
        - name: vppagent-passthrough-config-volume
          configMap:
            name: vppagent-passthrough-config-file
metadata:
  name: vppagent-passthrough-nse
  namespace: nsm-system
