k8s/conf/jaeger-node.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: nsm-system
spec:
  selector:
    matchLabels:
      run: jaeger
  replicas: 1
  template:
    metadata:
      labels:
        run: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 16686
            - name: jaeger
              containerPort: 6831
              protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  labels:
    run: jaeger
  namespace: nsm-system
spec:
  type: NodePort
  ports:
    - name: http
      port: 16686
      nodePort: 30000
      protocol: TCP
    - name: jaeger
      nodePort: 30001
      port: 6831
      protocol: UDP
  selector:
    run: jaeger
