k8s/conf/proxy-nsmgr.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: proxy-nsmgr
  namespace: nsm-system
spec:
  selector:
    matchLabels:
      app: proxy-nsmgr-daemonset
  template:
    metadata:
      labels:
        app: proxy-nsmgr-daemonset
    spec:
      containers:
        - name: proxy-nsmd
          image: networkservicemesh/proxy-nsmd
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5006
              hostPort: 5006
        - name: proxy-nsmd-k8s
          image: networkservicemesh/proxy-nsmd-k8s
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              hostPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: pnsmgr-svc
  labels:
    app: proxy-nsmgr-daemonset
  namespace: nsm-system
spec:
  ports:
    - name: pnsmd
      port: 5005
      protocol: TCP
    - name: pnsr
      port: 5006
      protocol: TCP
  selector:
    app: proxy-nsmgr-daemonset
